--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@prisma/client": "^6.19.0",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.3",
     "next": "16.0.3",
-    "next-auth": "^5.0.0-beta.30",
+    "next-auth": "^4.24.13",
     "nodemailer": "^7.0.10",
     "prisma": "^6.19.0",
     "react": "19.2.0",
