--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "next": "16.0.3",
-    "next-auth": "^4.24.13",
+    "next-auth": "^5.0.0-beta.30",
     "nodemailer": "^7.0.10",
     "prisma": "^6.19.0",
     "react": "19.2.0",
