--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.24",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.10",
